plugins/spot/SpotMsgFetcher: Clean URL construction future deprecation.